# pecan

./: "$(ssh-agent -s)"  "$(ssh-agent -s)".pub  .Rbuildignore  .Renviron  .Rhistory  .Rprofile  .bzrignore  .docker-compose.yml.swp  .dockerignore  .env  .geojson  .gitattributes  .gitignore  .my.cnf  .my.cnf_cluster  .my.cnf_forecast  .prettierignore  .travis.yml  .zenodo.json  01.global.subset.R  02.data.specific.subset.R  03.create.try.sites.R  04.match.species.R  05.citations.R  06.load.data.R  20140610_Reflectance.xls  20140611_Reflectance.xls  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Creation of Landtrendr.AGB.Model [Work In Progress]  DEBUGING.md  DESCRIPTION  DEV-INTRO.md  Dockerfile  FACE_CDIAC_obvs.Rdata  LICENSE  Makefile  Makefile.base  (+81 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  settings.yml
Betsy_MISC/: PSQL cheat sheet.R  Permute.netCDF.R  Permute.sh  Rechunk.netCDF.R  Rechunk.sh  insert_files.R
Betsy_Misc/: extraction_tests.R  var_file.sh
PEcAn.multisite/: DESCRIPTION
R/: allom.BayesFit.R  approx.posterior.R  birth.R  dbquery.R  decomp.R  dfdth.R  dtheta.q.R  extract2driver.R  grow.R  help.R  input.R  kill.R  linkages.R  ma.model.R  ma.model.ghs.R  model.specific.R  output.R  pdf.stats.R  pecan.SA.R  pecan.SAcalcs.R  pecan.SAplots.R  pecan.arrange.R  pecan.config.constants.R  pecan.dtheta.R  pecan.ed2.diagnostics.R  pecan.edout.R  pecan.ens.vals.R  pecan.ma.R  pecan.ma.summary.R  pecan.samps.R  pecan.tools.R  pecan.traitdefs.R  pecan.transformstats.R  pft.add.spp.R  plots.R  pr.samp.R  query.allom.data.R  query.bety.R  query.bety.con.R  query.bety.get.trait.data.R  (+22 more)
Shawn_PROSPECT/: diagnostics.R  invprospect.R  prospect4.R  prospect5.R  prospect5B.R  tav.R
VM_scripts/: manual_input_insert.R  write_met2xml.R
actions/: book.yml
all/: DESCRIPTION
api/: DESCRIPTION  NAMESPACE
bash/: aED2IN  batch.jobs.sh  clean.nodes.sh  cleanvm.sh  create.db.subset.sh  create.newrundir.sh  dump.db.subset.sh  env.vars.sh  find_edout_errors.sh  get.model.output.sh  install.dependencies.sh  meta.analysis.sh  metutils.sh  pecan.SA.sh  pecan.ed.batchjobs.sh  pecan.ed.ensemble.sh  pecan.ed2.diagnostics.sh  pecan.ed2in.create.sh  pecan.env.vars.sh  pecan.init.cluster.sh  pecan.init.sh  pecan.ma.sh  pecan.postrun.sh  pecan.run.jobs.sh  pecan.send.jobs.sh  pecan.writeconfigs.sh  pecanbuild.sh  rename.configs.sh  run-template.ED  run.ma.then.ed.sh  sensitivity.analysis.sh  sshkey.sh  start.runs.sh  write.configs.sh  write.namelists.sh
book_source/: BioCro-configuration.Rmd  Code-of-Conduct.Rmd  Enabling-Remote-Execution.Rmd  How-to-insert-new-Input-data.Rmd  Makefile  README.Rmd  SUMMARY.Rmd  _bookdown.yml  _main.Rmd  _output.yml  book.json  check_bkd_pkg.R  deploy.sh  how_to_use_book.Rmd  index.Rmd  libglu1-mesa-dev  project_overview.Rmd
common/: DESCRIPTION  NAMESPACE
contrib/: README.md
data/: burnin thin info.txt  dataSpec_p5B.RData  sed_proc.R
db/: DESCRIPTION  NAMESPACE
deprecated/: .Rbuildignore  DESCRIPTION  sefilelistfull.txt  shiklomanov_prelimresults.html
depreciated/: DESCRIPTION
docker/: DESCRIPTION.maeswrap  Dockerfile  Dockerfile.base  Dockerfile.cli  Dockerfile.depends  Dockerfile.executor  Dockerfile.pecan  Dockerfile.pecan-maespa  Dockerfile.sipnet  Dockerfile.web  add-data.sh  config.docker.php  docker-compose.example.yml  docker-compose.yml  env.example  index.html  install_R.sh  install_packages.sh  install_pecan.sh  model.py  (+9 more)
modules/DART/R/udunits-2.1.24/: BACKLOG  CHANGE_LOG  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  udunits2.html  udunits2.info  udunits2.texi  version.texi
modules/DART/R/udunits-2.1.24/expat/: Makefile.in
modules/DART/R/udunits-2.1.24/lib/: Makefile.am  Makefile.in  formatter.c  parser.c  testUnits.c  udunits2-common.xml  udunits2lib.html  udunits2lib.info  udunits2lib.texi  unitcore.c
modules/DART/R/udunits-2.1.24/lib/xmlFailures/: Makefile.in
modules/DART/R/udunits-2.1.24/lib/xmlSuccesses/: Makefile.in
modules/DART/R/udunits-2.1.24/prog/: Makefile.in
modules/DART/R/udunits-2.1.24/test/: Makefile.in
(+11901 files in other folders)
